Add dots and ties to notes which span measures to be closer to actual duration